fix changes from the smuggler

--- a/src/partials/main/news.html
+++ b/src/partials/main/news.html
@@ -1,7 +1,7 @@
 <section class="main-news">
   <div class="custom-container container-fluid">
     <div class="main-news__content position-relative">
-      <div class="main-news__top d-flex align-items-end justify-content-between">
+      <div class="main-news__top d-flex align-items-center justify-content-between">
         <h2 class="text-h2 text-uppercase">
           новости
         </h2>
