--- a/src/partials/protection/right.html
+++ b/src/partials/protection/right.html
@@ -1,31 +1,46 @@
 <div class="protection__right-block">
   <ul class="protection__right-list list-reset d-flex flex-column">
     <li class="protection__right-item text-button">
-      Операционная система QP ОС
+      Программные средства защиты информации линейки QP (ПСЗИ)
     </li>
     <li class="protection__right-item text-button">
       <a class="protection__right-link">
-        СУБД QP DB
+        ПСЗИ для Windows
       </a>
     </li>
     <li class="protection__right-item text-button">
       <a class="protection__right-link">
-        Гипервизор QP VMM
+        ПСЗИ для Microsoft Office
       </a>
     </li>
     <li class="protection__right-item text-button">
       <a class="protection__right-link">
-        Офисный пакет QP Грамота
+        ПСЗИ для СУДБ
       </a>
     </li>
     <li class="protection__right-item text-button">
       <a class="protection__right-link">
-        Сервер электронной почты QP Mail Server
+        ПСЗИ для почтового сервера Microsoft Exchange
       </a>
     </li>
     <li class="protection__right-item text-button">
       <a class="protection__right-link">
-        Операционная система QP ОС
+        ПСЗИ средств интеграции Microsoft BizTalk Server
+      </a>
+    </li>
+    <li class="protection__right-item text-button">
+      <a class="protection__right-link">
+        ПСЗИ системы создания и поддержки интранет-порталов Microsoft SharePoint Server
+      </a>
+    </li>
+    <li class="protection__right-item text-button">
+      <a class="protection__right-link">
+        ПСЗИ корпоративных носителей информации
+      </a>
+    </li>
+    <li class="protection__right-item text-button">
+      <a class="protection__right-link">
+        ПСЗИ конфиденциальных данных
       </a>
     </li>
   </ul>
