--- a/src/partials/qp/right.html
+++ b/src/partials/qp/right.html
@@ -1,11 +1,21 @@
 <div class="qp__right-block">
   <ul class="qp__right-list list-reset d-flex flex-column">
     <li class="qp__right-item text-button">
-      Операционная система QP ОС
+      QP OS
+    </li>
+    <li class="qp__right-item text-button">
+      <a href="qp.html" class="qp__right-link">
+        Операционная система QP OS
+      </a>
     </li>
     <li class="qp__right-item text-button">
       <a class="qp__right-link">
-        СУБД QP DB
+        Защищенный мессенджер QP Криптофон
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Облачные технологии операционной системы QP ОС
       </a>
     </li>
     <li class="qp__right-item text-button">
@@ -15,17 +25,57 @@
     </li>
     <li class="qp__right-item text-button">
       <a class="qp__right-link">
-        Офисный пакет QP Грамота
+        Кластер виртуальных машин
       </a>
     </li>
     <li class="qp__right-item text-button">
       <a class="qp__right-link">
-        Сервер электронной почты QP Mail Server
+        Распределенная файловая система
       </a>
     </li>
     <li class="qp__right-item text-button">
       <a class="qp__right-link">
-        Операционная система QP ОС
+        Тонкий клиент и сервер терминалов
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Система хранения данных
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Система электронного документооборота QP Docs M
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Рабочая станция QP ОС
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Серверные технологии операционной системы QP ОС
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Основные механизмы безопасности
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Средства разработки
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Удостоверяющий центр
+      </a>
+    </li>
+    <li class="qp__right-item text-button">
+      <a class="qp__right-link">
+        Средство защиты информации на основе технологии виртуализации
       </a>
     </li>
   </ul>
