--- a/src/partials/work/internship.html
+++ b/src/partials/work/internship.html
@@ -128,7 +128,7 @@
         </div>
         <div class="internship__form-wrap-input input-form__wrap">
           <label class="input-form__label">Расскажите о себе</label>
-          <textarea placeholder="ФИО" class="input-form input-form__textarea"></textarea>
+          <textarea placeholder="Расскажите о себе" class="input-form input-form__textarea"></textarea>
         </div>
         <a class="internship__form-add d-flex align-items-center">
           <span class="internship__form-add-svg">
