--- a/app/css/main.css
+++ b/app/css/main.css
@@ -814,6 +814,12 @@ p {
   font-family: var(--text-din);
 }
 
+.text-h11 {
+  font-size: var(--text-size-30);
+  line-height: var(--text-height-110);
+  font-family: var(--text-din);
+}
+
 .descr1 {
   font-size: var(--text-size-16);
   line-height: var(--text-height-145);
@@ -867,6 +873,10 @@ p {
 @media screen and (max-width: 991px) {
   .text-h1 {
     font-size: var(--text-size-90);
+  }
+  .text-h11 {
+    font-size: var(--text-size-14);
+    line-height: var(--text-height-135);
   }
 }
 @media screen and (max-width: 767px) {
@@ -1048,7 +1058,6 @@ p {
   position: absolute;
   right: 0;
   top: 0;
-  overflow-y: auto;
   background-color: var(--white);
   height: 100vh;
   width: 725px;
@@ -1070,7 +1079,9 @@ p {
   padding-left: 100px;
   margin-right: auto;
   max-width: 625px;
+  height: 100%;
   width: 100%;
+  overflow-y: auto;
 }
 .header__menu-content {
   width: 100%;
@@ -1451,10 +1462,10 @@ p {
   .hero {
     margin-top: 48px;
     padding: 20px 0 20px;
-    min-height: 558px;
+    min-height: 312px;
   }
   .hero__text-wrap {
-    margin-bottom: 118px;
+    margin-bottom: 56px;
   }
   .hero__text-first {
     padding: 6px 10px;
@@ -1464,7 +1475,7 @@ p {
     margin-bottom: 20px;
   }
   .hero__descr {
-    margin-bottom: 70px;
+    margin-bottom: 0;
     max-width: 317px;
   }
   .hero__link {
@@ -1615,7 +1626,6 @@ p {
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
   max-width: 287px;
   width: 100%;
-  margin-bottom: 26px;
 }
 .main-news__link:hover {
   background-color: var(--gray-secondary);
@@ -1728,7 +1738,7 @@ p {
     bottom: 0;
     top: calc(100% - 48px);
     width: 100%;
-    margin-bottom: 0;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 575px) {
@@ -1759,13 +1769,7 @@ p {
 .main-about__block {
   gap: 100px;
 }
-.main-about__img {
-  max-width: 310px;
-  width: 100%;
-  margin-right: var(--gap-30);
-}
 .main-about__description {
-  max-width: 815px;
   width: 100%;
   gap: var(--gap-50);
 }
@@ -1779,13 +1783,23 @@ p {
   gap: var(--gap-16);
 }
 .main-about__icon-svg {
-  width: 36px;
-  height: 36px;
+  width: 80px;
+  height: 80px;
 }
 
 @media screen and (max-width: 1110px) {
   .main-about__block {
     gap: var(--gap-50);
+  }
+}
+@media screen and (max-width: 992px) {
+  .main-about__icon-svg {
+    width: 40px;
+    height: 40px;
+  }
+  .main-about__icon-svg svg {
+    width: 40px;
+    height: 40px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -3913,11 +3927,58 @@ p {
 .quantum__pagination .swiper-pagination-bullet-active {
   background-color: var(--green);
 }
-.quantum__characteristics-img {
+.quantum__characteristics {
+  margin-bottom: var(--gap-40);
+}
+.quantum__characteristics-swiper {
   margin-bottom: 60px;
 }
 .quantum__characteristics-text:not(:last-child) {
   margin-bottom: var(--gap-24);
+}
+.quantum__accordion {
+  border-top: 1px solid var(--gray-secondary);
+}
+.quantum__accordion-item {
+  border-bottom: 1px solid var(--gray-secondary);
+}
+.quantum__accordion-item-head {
+  padding: 30px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.quantum__accordion-item-head-text {
+  margin-right: 20px;
+}
+.quantum__accordion-item-body {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.3s ease-in-out;
+  -o-transition: max-height 0.3s ease-in-out;
+  transition: max-height 0.3s ease-in-out;
+}
+.quantum__accordion-item-body-wrap {
+  margin-bottom: 30px;
+}
+.quantum__accordion-svg {
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+.quantum__accordion-item.is-show .quantum__accordion-svg {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .quantum__right {
   padding-left: 20px;
@@ -4082,7 +4143,7 @@ p {
     margin-bottom: var(--gap-20);
   }
   .quantum__descr {
-    margin-bottom: 70px;
+    margin-bottom: var(--gap-40);
   }
   .quantum__swiper-wrap {
     margin-bottom: 70px;
@@ -4095,7 +4156,7 @@ p {
     display: -ms-flexbox;
     display: flex;
   }
-  .quantum__characteristics-img {
+  .quantum__characteristics-swiper {
     margin-bottom: 20px;
   }
   .quantum__modal-dialog {
