--- a/src/partials/quantum/right.html
+++ b/src/partials/quantum/right.html
@@ -1,19 +1,17 @@
 <div class="quantum__right-block">
   <ul class="quantum__right-list list-reset d-flex flex-column">
     <li class="quantum__right-item text-button">
-      Квантово криптографические системы
+      Квантовые технологии
     </li>
     <li class="quantum__right-item text-button">
       <a class="quantum__right-link">
-        Квантовые системы выработки
-        и распределения ключей
+        Cryptosoft-Q. Квантовая система выработки и распределения ключей
+      </a>
+    </li>
+    <li class="quantum__right-item text-button">
+      <a class="quantum__right-link">
+        Лаборатория квантовой оптики
       </a>
     </li>
   </ul>
-  <h2 class="text-uppercase text-h8 quantum__right-title">
-    ОТправьте запрос на последнюю версию операционной системы
-  </h2>
-  <button class="quantum__button btn-reset" >
-    отправить
-  </button>
 </div>
