add 404 page and add link to hero

--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -22,6 +22,9 @@
           НТП "Криптософт" — ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
           и программных средств защиты информации
         </p>
+        <a class="btn-reset hero__more">
+          подробнее
+        </a>
       </div>
     </div>
   </div>
