--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -178,6 +178,11 @@ p {
   background-color: var(--white);
 }
 
+.background-green {
+  background: linear-gradient(180deg, #00B883 0%, #00523A 109.35%);
+
+}
+
 .tooltip {
   font-size: 1.6rem;
 }
