--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -27,6 +27,7 @@
   --text-neo: "Neo Sans Cyr";
   --text-neo-mid: "Neo Sans Cyr Medium";
 
+  --text-size-350: 35rem;
   --text-size-120: 12rem;
   --text-size-90: 9rem;
   --text-size-60: 6rem;
