--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,3 +32,4 @@
 @import "./components/protection/protection";
 @import "./components/quantum/quantum";
 @import "./components/map/map";
+@import "./components/error/error";
