add customer mid

--- a/src/partials/main/customers.html
+++ b/src/partials/main/customers.html
@@ -8,69 +8,46 @@
         <div class="customers__swiper swiper">
           <div class="customers__wrapper swiper-wrapper">
             <div class="customers__slide swiper-slide">
-              <div class="customers__slide-img">
+              <a href="http://www.kremlin.ru/" class="customers__slide-img">
                 <img src="./img/customer1.png" />
-              </div>
+              </a>
               <p class="text-h3 customers__slide-text">
                 Администрация Президента России
               </p>
             </div>
-            <div class="customers__slide swiper-slide">
+            <a href="http://www.fsb.ru/" class="customers__slide swiper-slide">
               <div class="customers__slide-img">
                 <img src="./img/customer2.png" />
               </div>
                 <p class="text-h3 customers__slide-text">
                   Федеральная Служба Безопасности
                 </p>
-            </div>
-            <div class="customers__slide swiper-slide">
+            </a>
+            <a href="http://fso.gov.ru/" class="customers__slide swiper-slide">
               <div class="customers__slide-img">
                 <img src="./img/customer3.png" />
               </div>
                 <p class="text-h3 customers__slide-text">
                   Федеральная служба охраны
                 </p>
-            </div>
-            <div class="customers__slide swiper-slide">
+            </a>
+            <a href="https://mil.ru/" class="customers__slide swiper-slide">
               <div class="customers__slide-img">
                 <img src="./img/customer4.png" />
               </div>
                 <p class="text-h3 customers__slide-text">
                   Министерство обороны
                 </p>
-            </div>
-            <div class="customers__slide swiper-slide">
+            </a>
+
+            <a href="https://www.mid.ru/" class="customers__slide swiper-slide">
               <div class="customers__slide-img">
-                <img src="./img/customer1.png" />
+                <img src="./img/customer5.svg" />
               </div>
-                <p class="text-h3 customers__slide-text">
-                  Администрация Президента России
-                </p>
-            </div>
-            <div class="customers__slide swiper-slide">
-              <div class="customers__slide-img">
-                <img src="./img/customer2.png" />
-              </div>
-                <p class="text-h3 customers__slide-text">
-                  Федеральная Служба Безопасности
-                </p>
-            </div>
-            <div class="customers__slide swiper-slide">
-              <div class="customers__slide-img">
-                <img src="./img/customer3.png" />
-              </div>
-                <p class="text-h3 customers__slide-text">
-                  Федеральная служба охраны
-                </p>
-            </div>
-            <div class="customers__slide swiper-slide">
-              <div class="customers__slide-img">
-                <img src="./img/customer4.png" />
-              </div>
-                <p class="text-h3 customers__slide-text">
-                  Министерство обороны
-                </p>
-            </div>
+              <p class="text-h3 customers__slide-text">
+                Министрество иностранных дел
+              </p>
+            </a>
           </div>
           <div class="customers__pagination"></div>
         </div>
